fixed some stuff on mobile

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,5 +20,5 @@ $z-index-1000: 1000;
 
 // Magic numbers
 $drawer-max-width: 580px;
-$breakpoint-tablet: 1280px;
+$breakpoint-tablet: 1199px;
 $header-height: 90px;
